# python-fundamentals

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  test_basic_sorting.py
docs/: 01-interpreter.md  02-language.md  Gemfile  _config.yml  index-old.md  index.md
docs/_data/: toc.yml
docs/_includes/: body.html
docs/_pages/: about.md  contact.md
docs/_posts/: 2023-10-01-charpter-01.md  2023-10-02-charpter-02.md  2023-10-03-charpter-03.md  2023-10-04-charpter-04.md  2023-10-05-charpter-02.md  2023-10-05-charpter-05.md  2023-10-06-charpter-06.md  2023-10-08-charpter-03.md
docs/assets/: python-3.svg:Zone.Identifier
docs/img/: photon-theme-freelancer.png:Zone.Identifier
docs/templates/: cards.html
py_fundamentals/design-patterns/: Abstract Factory Pattern.ipynb  Bridge Pattern.ipynb  Bridge.ipynb  Chain Pattern.ipynb  Decorator.ipynb  Iterator Pattern.ipynb  Null.ipynb  Observer Pattern.ipynb  README.md  Singleton Pattern.ipynb  Strategy Pattern.ipynb  Strategy.ipynb
py_fundamentals/design_patterns/: README.md  Singleton.ipynb
py_fundamentals/fluent-python/: 01-data-model.ipynb  (+1 more)
site/: 404.html  index.html
src/: Control flow.ipynb  Dictionary.ipynb  Exceptions.ipynb  Genetic Algorithms.ipynb  GeneticAlgorithms.ipynb  Lists.ipynb  OOP_Practice.ipynb  Primeiros passos.ipynb  Repetições.ipynb  __init__.py  args and kwargs.ipynb  desing_patterns.py  exercises-gently-explained.ipynb  hash.py  hash_table.ipynb  multiplication_table.ipynb  oop_practice.ipynb
tests/: test_basic_sorting.py  test_design_patterns.py
(+16 files in other folders)
