[tool.poetry]
name = "py-fundamentals"
version = "0.1.0"
description = ""
authors = ["Vitor Meriat <vitormeriat@gmail.com>"]
readme = "README.md"
# packages = [{include = "py_fundamentals"}]


[tool.poetry.dependencies]
python = "^3.10"
tabulate = "^0.9.0"
ipykernel = "^6.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
taskipy = "^1.10.4"
humanize = "^4.10.0"
matplotlib = "^3.9.2"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.8"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^0.9.0"
mkdocs-macros-plugin = "^0.7.0"


[tool.poetry.group.data.dependencies]
pandas = "^2.2.2"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
test = "pytest -s -x --cov=graph -vv"
docs = "mkdocs serve"